** Added neat transitions to everywhere and for everybody! ** Tooltip viewport overlapping prevented by science

--- a/sites/default/themes/burarum/sass/_base.scss
+++ b/sites/default/themes/burarum/sass/_base.scss
@@ -55,9 +55,18 @@ $headerPadding:4px 10px 4px 15px;
 $headerBackground:url('../gfx/title-background.jpg');
 $headerBorder:2px solid #000;
 
-/* Transitions */
-$transitionAnimation: all 300ms ease-in-out;
+/* Transitions for FIELDS */
 $fieldFocusAnimation: all 300ms linear;
+
+/* Transitions for CAROUSEL */
+$carouselHoverTransitionProperty:border,background,box-shadow;
+$carouselHoverTransitionDuration:800ms,500ms,100ms;
+$carouselHoverTransitionFunction:ease-in;
+
+/* Transitions for TOOLTIPS */
+$tooltipRTLTransitionProperties: margin-left,opacity,visibility;
+$tooltipRTLTransitionDurations: 250ms,200ms,1ms;
+$tooltipRTLTransitionFunction:linear;
 
 /* MIXINS 
  *
@@ -66,12 +75,58 @@ $fieldFocusAnimation: all 300ms linear;
  *
  */
  
+@mixin carousel-hover-transition($property: $carouselHoverTransitionProperty, $duration: $carouselHoverTransitionDuration, $function: $carouselHoverTransitionFunction) {
+  /* Animation */
+  transition-property:$property;
+  transition-duration:$duration;
+  transition-timing-function:$function;
+  /* Firefox 4 */
+  -moz-transition-property:$property;
+  -moz-transition-duration:$duration;
+  -moz-transition-timing-function:$function;
+  /* Safari and Chrome */
+  -webkit-transition-property:$property;
+  -webkit-transition-duration:$duration;
+  -webkit-transition-timing-function:$function;
+  /* Opera */
+  -o-transition-property:$property;
+  -o-transition-duration:$duration;
+  -o-transition-timing-function:$function;
+  /* IE */
+  -ms-transition-property:$property;
+  -ms-transition-duration:$duration;
+  -ms-transition-timing-function:$function;
+} 
+ 
 @mixin field-focus-animation() {
   transition:$fieldFocusAnimation;
   -moz-transition:$fieldFocusAnimation;
   -webkit-transition:$fieldFocusAnimation;
   -o-transition:$fieldFocusAnimation;
   -ms-transition: $fieldFocusAnimation;
+}
+
+@mixin tooltip-rtl-animation($property: $tooltipRTLTransitionProperties, $duration: $tooltipRTLTransitionDurations, $function: $tooltipRTLTransitionFunction) {
+  /* Animation */
+  transition-property:$property;
+  transition-duration:$duration;
+  transition-timing-function:$function;
+  /* Firefox 4 */
+  -moz-transition-property:$property;
+  -moz-transition-duration:$duration;
+  -moz-transition-timing-function:$function;
+  /* Safari and Chrome */
+  -webkit-transition-property:$property;
+  -webkit-transition-duration:$duration;
+  -webkit-transition-timing-function:$function;
+  /* Opera */
+  -o-transition-property:$property;
+  -o-transition-duration:$duration;
+  -o-transition-timing-function:$function;
+  /* IE */
+  -ms-transition-property:$property;
+  -ms-transition-duration:$duration;
+  -ms-transition-timing-function:$function;
 }
 
 @mixin h1h2-defaults($padding: $headerPadding, $background: $headerBackground, $border: $headerBorder) {
